# li_title_generator

./: .dockerignore  .env  .env.sample  .gitignore  CLAUDE.md  Dockerfile  README.md  api_keys.json.sample  compose.dev.yml  docker-compose.traefik.yml  docker-compose.traefik.yml.sample  docker-compose.yml  justfile  mkdocs.yml  pyproject.toml  versions.json
.claude/: settings.json
.github/workflows/: docker-publish.yml  docs.yml
0.10.1/: 404.html  index.html  sitemap.xml
0.10.1/api-reference/: index.html
0.10.1/configuration/: index.html
0.10.1/getting-started/: index.html
0.10.1/installation/: index.html
0.10.1/usage/: index.html
0.10.2/: 404.html  index.html  sitemap.xml
0.10.2/api-reference/: index.html
0.10.2/configuration/: index.html
0.10.2/getting-started/: index.html
0.10.2/installation/: index.html
0.10.2/search/: search_index.json
0.10.2/usage/: index.html
0.10.3/: 404.html  index.html  sitemap.xml
0.10.3/api-reference/: index.html
0.10.3/configuration/: index.html
0.10.3/getting-started/: index.html
0.10.3/installation/: index.html
0.10.3/usage/: index.html
deploy/: .env.sample  .gitignore  compose.traefik.yml  compose.yml  compose.yml.sample  traefik-mtls-options.yml.sample
docs/: api-reference.md  configuration.md  getting-started.md  index.md
docs/installation/: docker-compose.md  index.md  local-dev.md  traefik.md
docs/usage/: clients.md  colors.md  fonts.md  index.md  (+1 more)
scripts/: New-TitleImage.ps1  checkenv.ps1  install_fonts.py
tests/: conftest.py  test_auth.py  test_generate.py
tmp/: generate.py
(+26 files in other folders)
