[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "title-image-service"
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "build>=1.0",
]

[project.scripts]
title-image-service = "title_image_service.main:run"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "post-release"
local_scheme = "node-and-date"
dist_name = "title-image-service"

[tool.hatch.build.targets.wheel]
packages = ["src/title_image_service"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
